aboutme: fix heading spacing

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,6 +1,5 @@
-  .journey {
-  font-size: 5em;
-  font-family: roboto-bold;
+.journey {
+  text-align: center;
 }
 
 h3 {
